# prepline

./: .gitignore  CONTRIBUTING.md  PLAN.md  README.md  package-lock.json
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  demo.py  main.py  models.py  schemas.py  seed.py
backend/app/api/: __init__.py  plans.py  recipes.py  sessions.py
backend/app/core/: config.py  db.py  timeutil.py
backend/app/scheduler/: __init__.py  engine.py  types.py
backend/app/services/: planning.py  sessions.py  shopping.py
backend/tests/: conftest.py  test_api.py  test_engine.py  test_planning.py  test_shopping.py
frontend/: index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css  theme.ts
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AppShell.tsx  Timeline.tsx  WarningsBar.tsx
frontend/src/hooks/: useSession.ts
frontend/src/lib/: lanes.test.ts  lanes.ts  scaling.test.ts  scaling.ts  time.ts
frontend/src/pages/: CookPage.tsx  LibraryPage.tsx  PlanNewPage.tsx  PlansPage.tsx  RecipeEditorPage.tsx  ScorePage.tsx  ShoppingListPage.tsx
scripts/: e2e_verify.mjs
