[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prepline"
version = "0.1.0"
description = "The expediter for your home kitchen: compiles recipes into one resource-aware, live-replanning cooking timeline."
authors = [{ name = "Ravi Purushottam", email = "ravi.purushottamrajpurohit@gmail.com" }]
license = "AGPL-3.0-only"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "black>=24.0",
    "isort>=5.13",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # black owns code width; long strings stay readable

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends"]

[tool.pytest.ini_options]
testpaths = ["tests"]
